--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login</title>
+    <title>Login - IT School</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,17 +10,7 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="login-register-page">
-    <!-- <h1>H1 title here</h1>
-    <h3>H3 title here</h3>
-    <h4>h4 title here</h4>
-    <p>paragraph here</p>
-    <p class="light">light paragraph here</p>
-    <input type="text" placeholder="Placeholder" />
-    <input type="number" placeholder="Placeholder" />
-    <input type="date" placeholder="Placeholder" />
-    <a href="#" class="btn btn-primary">Login</a>
-    <button class="btn">Register</button> -->
-
+    <meta name="og:title" content="Login - IT School" />
     <div class="form-wrapper">
       <h1 class="mb-lg">Welcome</h1>
       <form action="newsfeed.html" method="post">
